--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 .App {
-  text-align: center;
+    width: 400px;
+    padding: 60px 0;
+    margin: 0 auto;
+    font-size: 20px;
+}
+button {
+    cursor: pointer;
+    border-radius: 6px;
+    border: none;
+    outline: none;
+}
+h2 {
+    text-align: center;
+}
+a {
+    text-decoration: none;
+    cursor: pointer;
+    color: unset;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.category {
+    display: flex;
+    border-bottom: 2px solid #ccc;
+    justify-content: space-between;
+}
+.category > a {
+    position: relative;
+}
+.category > a::before {
+    content: "";
+    position: absolute;
+    display: none;
+    width: 100%;
+    height: 4px;
+    bottom: -2px;
+    left: 0;
+    background-color: rgb(13, 106, 137);
+}
+.category > a.active::before {
+    display: block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mb-10 {
+    margin-bottom: 30px;
+}
+.form {
+    display: flex;
+    gap: 0 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.form input {
+    display: inline-block;
+    padding: 8px 16px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    flex: 1;
+}
+input:focus {
+    outline: none;
 }
 
-.App-link {
-  color: #61dafb;
+.form button {
+    padding: 8px 16px;
+    color: #fff;
+    font-family: bold;
+    background-color: rgb(13, 106, 137);
+}
+.task {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.left {
+    display: flex;
+    align-items: center;
+    gap: 0 5px;
+}
+span {
+    font-size: 24px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task.active span {
+    text-decoration: line-through;
+}
+.right {
+    font-size: 16px;
+    padding: 6px 12px;
+    background-color: rgb(53, 236, 53);
+    border: none;
+    color: #fff;
 }
